prd_appcolor/latest/appcolor-prd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appcolor
    versao: latest
    app.kubernetes.io/part-of: appcolor-prd-latest
  name: appcolor-prd-deploy-latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appcolor
      versao: latest
  template:
    metadata:
      labels:
        app: appcolor
        versao: latest
    spec:
      containers:
        - image: appcolor:latest
          name: appcolor
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 15
