prd_appcolor/latest/appcolor-prd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appcolor
    versao: latest
  name: appcolor-prd-svc-latest
spec:
  ports:
  - name: appcolor-prd-svc-port-latest
    port: 5000
    targetPort: 5000
  selector:
    app: appcolor
    versao: latest
