prd_appcolor/latest/appcolor-prd-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appcolor
    versao: latest
  name: appcolor-prd-route-latest
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appcolor-prd-svc-latest
    weight: 100
  port:
    targetPort: appcolor-prd-svc-port-latest
  wildcardPolicy: None
